# ocaml-wire

./: .gitignore  .merlint  AllInts.3d  Bitfield16.3d  Bitfield32.3d  Bitfield8.3d  Bitfields.3d  BoolFields.3d  CHANGES.md  CLAUDE.md  CLCW.3d  Enumerations.3d  Ethernet.3d  FieldDependence.3d  IPv4.3d  LargeMixed.3d  Makefile  Minimal.3d  README.md  SpacePacket.3d  TCP.3d  TMFrame.3d  UDP.3d  d3t.opam  dune  dune-project  dune-workspace  wire.opam
.github/workflows/: ci.yml
bench/: README.md  bench.ml  bench_alloc.ml  bench_clcw.ml  bench_common.h  bench_gateway.ml  bench_lib.ml  bench_lib.mli  bench_perf.ml  bench_routing.ml  bench_schemas.ml  bench_schemas.mli  bench_wire_memtrace.ml  c_scenarios.c  c_scenarios.ml  c_tier.everparse.ml  c_tier.none.ml  dune  gen_bench_stubs.ml  gen_stubs.ml  memtrace.ml  timing.ml
bench/clcw/: bench.ml  clcw_bench.ml  clcw_bench.mli  clcw_c.c  dune
bench/demo/: bench.ml  demo_bench_cases.ml  demo_bench_cases.mli  demo_bench_diff.ml  demo_bench_diff.mli  dune
bench/gateway/: bench.ml  dune  gateway_bench.ml  gateway_bench.mli  gateway_c.c
bench/memtrace/: bench.ml  dune
bench/routing/: bench.ml  dune  routing_bench.ml  routing_bench.mli  routing_c.c
examples/: dune  gen_3d.ml  validate_3d.ml
examples/demo/: demo.ml  demo.mli
examples/net/: Net.3d  dune  example.ml  gen_spec.ml  net.ml  net.mli
examples/space/: space.ml  space.mli
fuzz/: afl.dict  dune  fuzz.ml  fuzz_c.ml  fuzz_c.mli  fuzz_everparse.ml  fuzz_param.ml  fuzz_param.mli  fuzz_wire.ml  gen_corpus.ml
fuzz/3d/: dune  fuzz.ml  fuzz_everparse.ml
fuzz/diff/: dune  fuzz.ml
lib/: action.ml  action.mli  ascii.ml  ascii.mli  bitfield.ml  bitfield.mli  c.ml  c.mli  codec.ml  codec.mli  dune  eval.ml  eval.mli  everparse.ml  everparse.mli  field.ml  field.mli  param.ml  param.mli  staged.ml  staged.mli  types.ml  types.mli  uInt32.ml  uInt32.mli  uInt63.ml  uInt63.mli  uint32.ml  uint32.mli  uint63.ml  uint_var.ml  uint_var.mli  wire.ml  wire.mli
lib/3d/: dune  wire_3d.ml  wire_3d.mli
lib/c/: wire_c.ml  wire_c.mli
lib/diff/: diff.ml  diff.mli  dune  wire_diff.ml  wire_diff.mli
lib/diff-gen/: diff_gen.ml  dune  wire_diff_gen.ml  wire_diff_gen.mli
lib/stubs/: dune  wire_stubs.ml  wire_stubs.mli
lib/test/bitfield/: test.ml  test_bitfield.ml  test_bitfield.mli
lib/test/c/: dune  test_wire_c.ml  test_wire_c.mli
lib/test/diff/: test_wire_diff.ml
lib/test/diff-gen/: test_wire_diff_gen.ml
lib/test/everparse/: test.ml  test_wire_3d.ml
lib/test/field/: test.ml  test_field.ml  test_field.mli
lib/test/stubs/: test_wire_stubs.ml  test_wire_stubs.mli
test/: dune  gen_3d.ml  test.ml  test_action.ml  test_action.mli  test_ascii.ml  test_ascii.mli  test_bitfield.ml  test_bitfield.mli  test_c.ml  test_codec.ml  test_codec.mli  test_eval.ml  test_eval.mli  test_everparse.ml  test_everparse.mli  test_field.ml  test_field.mli  test_param.ml  test_param.mli  test_staged.ml  test_staged.mli  test_types.ml  test_types.mli  test_uInt32.ml  test_uInt63.ml  test_uint32.ml  test_uint32.mli  test_uint63.ml  test_uint63.mli  test_uint_var.ml  test_uint_var.mli  test_wire.ml  test_wire.mli
test/3d/: dune  gen_3d.ml  test_wire_3d.ml  test_wire_3d.mli
test/alcobar/: alcobar.ml  alcobar.mli  dune
test/bench/: dune  test.ml  test_application_benches.ml  test_bench_lib.ml  test_bench_lib.mli  test_demo_bench_cases.ml  test_demo_bench_cases.mli
test/bench-diff/: dune  test.ml
test/cram/: dune  no_decoration_at_typ_level.t
test/diff/: dune  fuzz_diff.ml  fuzz_schema.ml  gen_c.ml  gen_schemas.ml  schema.ml  schema.mli  test.mli  test_diff.ml  test_wire_diff.ml  test_wire_diff.mli
test/diff-gen/: test_wire_diff_gen.ml  test_wire_diff_gen.mli
test/fixtures/: dune  test_fixtures.ml  test_fixtures.mli
test/helpers/: dune  test_helpers.ml  test_helpers.mli
test/stubs/: dune  test_wire_stubs.ml
test/wasm/: dune  test.ml
tmp/: debug_bf8.ml  dune
