(executable
 (name fuzz)
 (libraries wire wire.3d unix alcobar fuzz_gen))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (deps fuzz.exe)
 (action
  (run %{exe:fuzz.exe})))

; afl-fuzz searches PATH for a target with no '/', so pass [./fuzz.exe] (the
; cwd is this dir in the build tree, where fuzz.exe is built).

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (deps fuzz.exe)
 (action
  (progn
   (run %{exe:fuzz.exe} --gen-corpus corpus)
   ; One exec runs the whole property suite, which is well over afl's default
   ; 1s per-exec timeout, so raise it; [-V] still caps total fuzzing time.
   (run afl-fuzz -V 60 -t 8000 -i corpus -o _fuzz -- ./fuzz.exe @@))))
