(executable
 (name fuzz)
 (libraries wire wire.3d unix alcobar fuzz_gen))

(rule
 (alias runtest)
 (enabled_if
  (<> %{profile} afl))
 (deps fuzz.exe ../afl.dict)
 (action
  (run %{exe:fuzz.exe})))

; afl-fuzz searches PATH for a target with no '/', so pass [./fuzz.exe] (the
; cwd is this dir in the build tree, where fuzz.exe is built).

(rule
 (alias fuzz)
 (enabled_if
  (= %{profile} afl))
 (deps fuzz.exe ../afl.dict)
 (action
  (progn
   (run %{exe:fuzz.exe} --gen-corpus corpus)
   (run
    afl-fuzz
    -V
    60
    -t
    8000
    -x
    ../afl.dict
    -i
    corpus
    -o
    _fuzz
    --
    ./fuzz.exe
    @@))))
